--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,10 @@ before_script:
 
 script:
   - vendor/bin/php-cs-fixer fix --diff --dry-run
-  - vendor/bin/phpunit
+  - vendor/bin/phpunit --coverage-clover coverage-clover.xml
 
 after_script:
   - env
+
+after_success:
+  - travis_retry php vendor/bin/coveralls -v
