--- a/composer.json
+++ b/composer.json
@@ -43,5 +43,11 @@
         "friendsofphp/php-cs-fixer": "^2.0",
         "satooshi/php-coveralls": "^1.0"
     },
-    "bin": ["bin/ci-detector"]
+    "bin": ["bin/ci-detector"],
+    "scripts": {
+        "build": [
+            "composer update --no-dev",
+            "phar-composer.phar build . ci-detector.phar"
+        ]
+    }
 }
