Add dump command to dump all available properties in current environment

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ script:
   - vendor/bin/phpunit --coverage-clover coverage-clover.xml
 
 after_script:
+  - bin/ci-detector dump
   - env
 
 after_success:
