--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "jenkins",
         "travis",
         "circleci",
+        "appveyor",
         "bamboo",
         "teamcity",
         "gitlab",
@@ -34,7 +35,7 @@
     },
     "require": {
         "php" : "^5.6 || ^7.0",
-        "ondram/ci-detector": "^2.0",
+        "ondram/ci-detector": "^2.1",
         "symfony/console": "^3.2",
         "zendframework/zend-filter": "^2.7"
     },
