--- a/composer.json
+++ b/composer.json
@@ -34,15 +34,15 @@
         }
     },
     "require": {
-        "php" : "^5.6 || ^7.0",
-        "ondram/ci-detector": "^2.1",
+        "php" : "^7.1",
+        "ondram/ci-detector": "^3.0",
         "symfony/console": "^3.2",
         "zendframework/zend-filter": "^2.7"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "friendsofphp/php-cs-fixer": "^2.0",
-        "satooshi/php-coveralls": "^1.0"
+        "phpunit/phpunit": "^6.4",
+        "friendsofphp/php-cs-fixer": "^2.7",
+        "php-coveralls/php-coveralls": "^1.0.2"
     },
     "bin": ["bin/ci-detector"],
     "scripts": {
