--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
     "require-dev": {
         "phpunit/phpunit": "^6.4",
         "friendsofphp/php-cs-fixer": "^2.7",
-        "php-coveralls/php-coveralls": "^1.0.2"
+        "php-coveralls/php-coveralls": "^1.0.2",
+        "phpstan/phpstan-shim": "^0.8.5"
     },
     "bin": ["bin/ci-detector"],
     "scripts": {
