--- a/.travis.yml
+++ b/.travis.yml
@@ -30,4 +30,4 @@ after_script:
   - env
 
 after_success:
-  - travis_retry php vendor/bin/coveralls -v
+  - travis_retry php vendor/bin/php-coveralls -v
