Update readme to include new supported CIs

--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,16 @@
         "adapter",
         "interface",
         "command",
-        "jenkins",
-        "travis",
-        "circleci",
         "appveyor",
         "bamboo",
-        "teamcity",
+        "circleci",
+        "codeship",
+        "continuousphp",
+        "drone",
         "gitlab",
-        "codeship"
+        "jenkins",
+        "teamcity",
+        "travis"
     ],
     "type": "library",
     "license": "MIT",
