--- a/composer.json
+++ b/composer.json
@@ -38,15 +38,15 @@
     "require": {
         "php" : "^7.1",
         "ext-mbstring" : "*",
-        "ondram/ci-detector": "^3.0",
+        "ondram/ci-detector": "3.1.x",
         "symfony/console": "^4.0 || ^5.0",
         "zendframework/zend-filter": "^2.7"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0 || ^8.5.0",
-        "friendsofphp/php-cs-fixer": "^2.16.1",
-        "php-coveralls/php-coveralls": "^2.0",
-        "phpstan/phpstan": "^0.12.0"
+        "phpunit/phpunit": "^7.0 || ^8.0 || 9.0",
+        "php-coveralls/php-coveralls": "^2.2",
+        "phpstan/phpstan": "^0.9.2",
+        "lmc/coding-standard": "^1.3 || ^2.0"
     },
     "bin": ["bin/ci-detector"],
     "scripts": {
