--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "php": "^7.1",
         "ext-mbstring": "*",
         "laminas/laminas-filter": "^2.7",
-        "ondram/ci-detector": "3.1.x",
+        "ondram/ci-detector": "=3.2.0",
         "symfony/console": "^4.0 || ^5.0"
     },
     "require-dev": {
