--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,11 @@
 {
     "name": "ondram/ci-detector-standalone",
+    "type": "library",
     "description": "Standalone CLI command to detect continuous integration server and provide unified access to properties of current build",
     "keywords": [
         "continuous integration",
-        "adapter",
-        "interface",
-        "command",
-        "appveyor",
-        "bamboo",
-        "circleci",
-        "codeship",
-        "continuousphp",
-        "drone",
-        "gitlab",
-        "jenkins",
-        "teamcity",
-        "travis"
+        "command"
     ],
-    "type": "library",
     "license": "MIT",
     "authors": [
         {
@@ -25,6 +13,26 @@
             "email": "ondrej.machulda@gmail.com"
         }
     ],
+    "require": {
+        "php": "^7.1",
+        "ext-mbstring": "*",
+        "ondram/ci-detector": "3.1.x",
+        "symfony/console": "^4.0 || ^5.0",
+        "zendframework/zend-filter": "^2.7"
+    },
+    "require-dev": {
+        "ergebnis/composer-normalize": "^2.2",
+        "jakub-onderka/php-parallel-lint": "^1.0",
+        "lmc/coding-standard": "^1.3",
+        "php-coveralls/php-coveralls": "^2.2",
+        "phpstan/extension-installer": "^1.0.3",
+        "phpstan/phpstan": "^0.12.0",
+        "phpstan/phpstan-phpunit": "^0.12.1",
+        "phpunit/phpunit": "^7.0 || ^8.0 || ^9.0"
+    },
+    "config": {
+        "sort-packages": true
+    },
     "autoload": {
         "psr-4": {
             "OndraM\\CiDetector\\": "src/"
@@ -35,24 +43,27 @@
             "OndraM\\CiDetector\\Tests\\": "tests/"
         }
     },
-    "require": {
-        "php" : "^7.1",
-        "ext-mbstring" : "*",
-        "ondram/ci-detector": "3.1.x",
-        "symfony/console": "^4.0 || ^5.0",
-        "zendframework/zend-filter": "^2.7"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^7.0 || ^8.0 || 9.0",
-        "php-coveralls/php-coveralls": "^2.2",
-        "phpstan/phpstan": "^0.9.2",
-        "lmc/coding-standard": "^1.3 || ^2.0"
-    },
-    "bin": ["bin/ci-detector"],
+    "bin": [
+        "bin/ci-detector"
+    ],
     "scripts": {
+        "all": [
+            "@lint",
+            "@analyze",
+            "./vendor/bin/phpunit --colors=always"
+        ],
+        "analyze": [
+            "./vendor/bin/ecs check ./src/ ./tests/ --ansi",
+            "./vendor/bin/phpstan analyze -c phpstan.neon --ansi"
+        ],
         "build": [
             "composer update --no-dev",
             "phar-composer.phar build . ci-detector.phar"
+        ],
+        "lint": [
+            "vendor/bin/parallel-lint -j 10 ./src ./tests",
+            "@composer validate",
+            "@composer normalize --dry-run"
         ]
     }
 }
