--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,15 @@
     "require": {
         "php": "^7.1",
         "ext-mbstring": "*",
+        "laminas/laminas-filter": "^2.7",
         "ondram/ci-detector": "3.1.x",
-        "symfony/console": "^4.0 || ^5.0",
-        "zendframework/zend-filter": "^2.7"
+        "symfony/console": "^4.0 || ^5.0"
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.2",
-        "jakub-onderka/php-parallel-lint": "^1.0",
-        "lmc/coding-standard": "^1.3",
+        "lmc/coding-standard": "^1.3 || ^2.0",
         "php-coveralls/php-coveralls": "^2.2",
+        "php-parallel-lint/php-parallel-lint": "^1.1",
         "phpstan/extension-installer": "^1.0.3",
         "phpstan/phpstan": "^0.12.0",
         "phpstan/phpstan-phpunit": "^0.12.1",
