--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "ondram/ci-detector-standalone",
     "type": "library",
-    "description": "Standalone CLI command to detect continuous integration server and provide unified access to properties of current build",
+    "description": "Standalone CLI command to detect continuous integration environment and provide unified access to properties of current build",
     "keywords": [
         "continuous integration",
         "command"
@@ -16,19 +16,19 @@
     "require": {
         "php": "^7.1",
         "ext-mbstring": "*",
-        "laminas/laminas-filter": "^2.7",
-        "ondram/ci-detector": "=3.4.0",
-        "symfony/console": "^4.0 || ^5.0"
+        "laminas/laminas-filter": "^2.10.0",
+        "ondram/ci-detector": "=4.0.0",
+        "symfony/console": "^5.2.3"
     },
     "require-dev": {
-        "ergebnis/composer-normalize": "^2.2",
-        "lmc/coding-standard": "^1.3 || ^2.0",
-        "php-coveralls/php-coveralls": "^2.2",
-        "php-parallel-lint/php-parallel-lint": "^1.1",
-        "phpstan/extension-installer": "^1.0.3",
-        "phpstan/phpstan": "^0.12.0",
-        "phpstan/phpstan-phpunit": "^0.12.1",
-        "phpunit/phpunit": "^7.5 || ^8.0 || ^9.0"
+        "ergebnis/composer-normalize": "^2.13",
+        "lmc/coding-standard": "^2.0",
+        "php-coveralls/php-coveralls": "^2.4.3",
+        "php-parallel-lint/php-parallel-lint": "^1.2.0",
+        "phpstan/extension-installer": "^1.1.0",
+        "phpstan/phpstan": "^0.12.76",
+        "phpstan/phpstan-phpunit": "^0.12.17",
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "sort-packages": true
